# v1-trading

./: Cargo.toml
src/: binance.rs  http.rs  main.rs
src/logic/: evaluate_buy_orders.rs  evaluatelevel.rs  generalFunctions.rs  mod.rs  order.rs  stream_initializer.rs  user_stream_handler.rs
src/logic/futures/: closeshort.rs  mod.rs  open_shory.rs
src/state/: asset.rs  market_price.rs  mod.rs  orderbook.rs  orders.rs
src/stream/: aggtrade_stream.rs  bookticker_stream.rs  mod.rs  user_stream.rs
